--- a/public/form.html
+++ b/public/form.html
@@ -29,7 +29,6 @@
       padding: 24px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-      position: relative; /* Lägg till position: relative för att placera felmeddelanden relativt till denna div */
     }
 
     h1 {
@@ -76,16 +75,13 @@
     .formbold-form-input-wrapper {
       position: relative;
       margin-bottom: 24px;
-      /* Gör plats för felmeddelandet */
     }
 
     .error-message {
       position: absolute;
       top: 50%;
-      right: -200px;
-      left: 90%;
-      margin-left: 10px;
-      /* Du kan justera detta beroende på layout */
+      left: 105%; 
+      margin-left: 10px; 
       transform: translateY(-50%);
       background-color: #f8d7da;
       color: #721c24;
@@ -93,13 +89,12 @@
       border-radius: 5px;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       font-size: 14px;
-      display: none;
-      /* Döljer meddelandet till en början */
+      display: none; 
+      white-space: nowrap;
     }
-
+    
     .error-message.show {
       display: inline-block;
-      /* Visar när det är ett fel */
     }
   </style>
 </head>
@@ -109,7 +104,7 @@
     <h1>Fyll i dina uppgifter</h1>
     <form id="verificationForm">
       <div class="formbold-form-input-wrapper">
-        <label for="name">Namn:</label>
+        <label for="name">För- och efternamn:</label>
         <input type="text" id="name" name="name" required class="formbold-form-input">
         <span id="nameError" class="error-message"></span>
       </div>
@@ -125,7 +120,7 @@
       </div>
       <div class="formbold-form-input-wrapper">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required class="formbold-form-input" autocomplete="off">
+        <input type="email" id="email" name="email" required class="formbold-form-input">
         <span id="emailError" class="error-message"></span>
       </div>
       <div class="formbold-form-input-wrapper">
