--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Verifiera dina uppgifter</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: "Inter", sans-serif;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background: #f5f5f5;
+    }
+
+    .formbold-main-wrapper {
+      max-width: 550px;
+      width: 100%;
+      background: white;
+      padding: 24px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      color: #07074D;
+      text-align: center;
+    }
+
+    .formbold-form-btn {
+      width: 100%;
+      padding: 12px;
+      background-color: #6A64F1;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 500;
+      transition: background-color 0.3s;
+    }
+
+    .formbold-form-btn:hover {
+      background-color: #5a54d1;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Verifiera dina uppgifter</h1>
-  <button onclick="window.location.href='/form'">Verifiera dina uppgifter</button>
+  <div class="formbold-main-wrapper">
+    <h1>Verifiera dina uppgifter</h1>
+    <button class="formbold-form-btn" onclick="window.location.href='/form'">Verifiera dina uppgifter</button>
+  </div>
 </body>
+
 </html>
