Refactor form.html and README.md to use FormValidator.js for form validation

--- a/public/form.html
+++ b/public/form.html
@@ -142,7 +142,7 @@
     </form>
   </div>
 
-  <script type="module" src="/js/form.js"></script>
+  <script type="module" src="/js/FormValidator.js"></script>
 </body>
 
 </html>
